--- a/src/components/modes/quiz/QuizListing.css
+++ b/src/components/modes/quiz/QuizListing.css
@@ -10,10 +10,6 @@
     font-style: normal;
 }
 
-.quiz:hover {
-    background-color: var(--interactable);
-}
-
 .quiz-buttons {
     display: flex;
     align-items: center;
@@ -44,9 +40,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    flex-shrink: 0;
+    flex-grow: 1;
     gap: 5px;
     height: 100%;
+}
+
+.quiz:hover {
+    background-color: var(--interactable);
+}
+
+.quiz-descriptions:hover {
+    cursor: pointer;
 }
 
 .quiz-title {
